--- a/templates/pages/assessment/readonly_section_overview.html
+++ b/templates/pages/assessment/readonly_section_overview.html
@@ -478,7 +478,7 @@
                             <a href="{{ url_for('assessment.report', assessment_id=assessment.id) }}" 
                                class="btn-nav btn-primary-nav">
                                 <i class="bi bi-graph-up me-2"></i>
-                                View Results
+                                View Report
                             </a>
                             {% endif %}
                             
