--- a/templates/pages/assessment/report.html
+++ b/templates/pages/assessment/report.html
@@ -684,7 +684,7 @@
     <div class="row mt-5">
         <div class="col-12 text-center fade-in">
             <div class="btn-group no-print" role="group">
-                <a href="{{ url_for('assessment.start') }}" 
+                <a href="{{ url_for('assessment.create') }}" 
                    class="btn btn-success btn-lg">
                     <i class="bi bi-plus-circle me-2"></i>New Assessment
                 </a>
